[tool.poetry]
name = "autoclip"
version = "0.1.0"
description = "AutoCLIP: Auto-tuning Zero-Shot Classifiers for Vision-Language Models"
authors = ["Jan Hendrik Metzen <janhendrik.metzen@de.bosch.com>"]
license = "GNU AFFERO GENERAL PUBLIC LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.9.2"
scipy = "^1.14.0"
numpy = "^2.0.1"
seaborn = "^0.13.2"
torch = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
